--- a/Src/Canvas/CanvasDiploidCaller/packages.config
+++ b/Src/Canvas/CanvasDiploidCaller/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Illumina.Common" version="1.41.0-O00011develop" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.5.0-O00063develop" targetFramework="net451" />
-  <package id="Isas.Framework" version="4.1.0-O00029develop" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.5.0-O00063develop" targetFramework="net451" />
+  <package id="Illumina.Common" version="2.0.1.40" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.6.0.87" targetFramework="net451" />
+  <package id="Isas.Framework" version="4.1.0.32" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.6.0.87" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.13.1" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
