--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -11,11 +11,11 @@
     <copyright>Copyright 2017</copyright>
     <tags>Canvas</tags>
     <dependencies>
-      <dependency id="Isas.Manifests" version="[2.3.0,3.0.0)" />
-      <dependency id="Isas.Ploidy" version="(0.1.0,1.0.0)" />
-      <dependency id="Isas.SequencingFiles" version="(3.4.0,4.0.0)" />
-      <dependency id="Isas.Framework" version="(4.0.0,5.0.0)" />
-	    <dependency id="Illumina.Common" version="[2.0.0,3.0.0)" />
+      <dependency id="Isas.Manifests" version="[2.9.0,3.0.0)" />
+      <dependency id="Isas.Ploidy" version="[1.0.0,2.0.0)" />
+      <dependency id="Isas.SequencingFiles" version="[3.6.1,4.0.0)" />
+      <dependency id="Isas.Framework" version="[5.0.0,6.0.0)" />
+      <dependency id="Illumina.Common" version="[2.0.1,3.0.0)" />
     </dependencies>
   </metadata>
   <files>
