--- a/Src/Canvas/Wrapper/Wrapper.csproj
+++ b/Src/Canvas/Wrapper/Wrapper.csproj
@@ -36,32 +36,36 @@
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Illumina.Common, Version=2.0.1.40, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Illumina.Common.2.0.1.40\lib\net451\Illumina.Common.dll</HintPath>
+    <Reference Include="ClassicBioinfoTools, Version=0.0.1.15, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\ClassicBioinfoTools.0.0.1.15\lib\net451\ClassicBioinfoTools.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Framework, Version=4.1.0.32, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.Framework.4.1.0.32\lib\net451\Isas.Framework.dll</HintPath>
+    <Reference Include="Illumina.Common, Version=2.0.1.46, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Illumina.Common.2.0.1.46\lib\net451\Illumina.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.AmpliconManifest, Version=2.7.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.Manifests.2.7.0\lib\net451\Isas.Manifests.AmpliconManifest.dll</HintPath>
+    <Reference Include="Isas.Framework, Version=5.0.1.51, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Framework.5.0.1.51\lib\net451\Isas.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.ForenSeqManifest, Version=2.7.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.Manifests.2.7.0\lib\net451\Isas.Manifests.ForenSeqManifest.dll</HintPath>
+    <Reference Include="Isas.Manifests.AmpliconManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.AmpliconManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Manifests.NexteraManifest, Version=2.7.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.Manifests.2.7.0\lib\net451\Isas.Manifests.NexteraManifest.dll</HintPath>
+    <Reference Include="Isas.Manifests.ForenSeqManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.ForenSeqManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.Ploidy, Version=0.3.0.11, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.Ploidy.0.3.0.11\lib\net451\Isas.Ploidy.dll</HintPath>
+    <Reference Include="Isas.Manifests.NexteraManifest, Version=2.9.0.9, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Manifests.2.9.0.9\lib\net451\Isas.Manifests.NexteraManifest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.SequencingFiles, Version=3.6.0.87, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\Canvas\packages\Isas.SequencingFiles.3.6.0.87\lib\net451\Isas.SequencingFiles.dll</HintPath>
+    <Reference Include="Isas.Ploidy, Version=1.0.0.17, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Ploidy.1.0.0.17\lib\net451\Isas.Ploidy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Isas.SequencingFiles, Version=3.6.1.94, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.SequencingFiles.3.6.1.94\lib\net451\Isas.SequencingFiles.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -108,12 +112,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\Canvas\packages\Isas.FileCompression.3.6.0.87\build\net451\Isas.FileCompression.targets" Condition="Exists('..\Canvas\packages\Isas.FileCompression.3.6.0.87\build\net451\Isas.FileCompression.targets')" />
+  <Import Project="..\Canvas\packages\Isas.FileCompression.3.6.1.94\build\net451\Isas.FileCompression.targets" Condition="Exists('..\Canvas\packages\Isas.FileCompression.3.6.1.94\build\net451\Isas.FileCompression.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\Canvas\packages\Isas.FileCompression.3.6.0.87\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\Canvas\packages\Isas.FileCompression.3.6.0.87\build\net451\Isas.FileCompression.targets'))" />
+    <Error Condition="!Exists('..\Canvas\packages\Isas.FileCompression.3.6.1.94\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\Canvas\packages\Isas.FileCompression.3.6.1.94\build\net451\Isas.FileCompression.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
