--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -22,6 +22,7 @@
     <file src="..\x64\Release\*" target="build/Canvas" />
     <file src="Canvas.targets" target="build/Canvas.targets" />
     <file src="..\Wrapper\bin\x64\Release\Canvas.Wrapper.dll" target="lib\net451" />
+    <file src="..\Wrapper\bin\x64\Release\Canvas.exe" target="lib\net451" />
     <file src="..\Wrapper\bin\x64\Release\Canvas.Wrapper.XML" target="lib\net451" />
   </files>
 </package>
