--- a/Src/Canvas/CanvasSmooth/CanvasSmooth.csproj
+++ b/Src/Canvas/CanvasSmooth/CanvasSmooth.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -23,9 +23,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="2.2.0.110" />
-    <PackageReference Include="Isas.Framework" Version="5.4.0.135" />
+    <PackageReference Include="Isas.Framework" Version="5.4.0.137" />
     <PackageReference Include="Isas.Manifests" Version="2.12.0.41" />
-    <PackageReference Include="Isas.SequencingFiles" Version="3.10.1.199" />
+    <PackageReference Include="Isas.SequencingFiles" Version="3.10.1.201" />
   </ItemGroup>
 
 </Project>
