--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="4.1.1" />
-    <PackageReference Include="Illumina.Common" Version="4.9.0.317" />
+    <PackageReference Include="Illumina.Common" Version="4.11.0.329" />
     <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="7.11.1.596" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\CanvasClean\CanvasClean.csproj" />
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
     <ProjectReference Include="..\CanvasPartition\CanvasPartition.csproj" />
+    <ProjectReference Include="..\CanvasPedigreeCaller\CanvasPedigreeCaller.csproj" />
     <ProjectReference Include="..\CanvasSNV\CanvasSNV.csproj" />
     <ProjectReference Include="..\CanvasSomaticCaller\CanvasSomaticCaller.csproj" />
     <ProjectReference Include="..\Canvas\Canvas.csproj" />
