--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -37,6 +37,8 @@
   </ItemGroup>
   <ItemGroup>
   
+    <PackageReference Include="ClassicBioinfoTools" Version="2.3.1.183" />
+  
     <PackageReference Include="Illumina.Common" Version="4.11.0.329" />
     <PackageReference Include="Isas.Framework" Version="7.11.1.596" />
     <PackageReference Include="Isas.SequencingFiles" Version="5.4.0.383" />
