--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -29,6 +29,7 @@
   </Target>
   <ItemGroup>
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
+    <ProjectReference Include="..\Canvas\Canvas.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PedigreeCallerParameters.json">
