--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -39,9 +39,9 @@
   
     <PackageReference Include="ClassicBioinfoTools" Version="2.3.1.183" />
   
-    <PackageReference Include="Illumina.Common" Version="4.11.0.329" />
+    <PackageReference Include="Illumina.Common" Version="4.11.2-O00335CANV-104" />
     <PackageReference Include="Isas.Framework" Version="7.11.1.596" />
-    <PackageReference Include="Isas.SequencingFiles" Version="5.5.0-O00391CANV-104" />
+    <PackageReference Include="Isas.SequencingFiles" Version="5.5.0.393" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
