--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -24,13 +24,13 @@
 
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="4.2.1" />
-    <PackageReference Include="Illumina.Common" Version="5.0.0.364" />
-    <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="8.1.0.804" />
-    <PackageReference Include="Isas.SequencingFiles" Version="6.0.0.402" />
+    <PackageReference Include="Illumina.Common" Version="5.0.6.381" />
+    <PackageReference Include="Isas.Framework.UnitTestUtilities" Version="8.12.3.916" />
+    <PackageReference Include="Isas.SequencingFiles" Version="6.1.1.409" />
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="NSubstitute" Version="2.0.3" />
-    <PackageReference Include="protobuf-net" Version="2.3.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0-preview-20180109-01" />
+    <PackageReference Include="NSubstitute" Version="3.1.0" />
+    <PackageReference Include="protobuf-net" Version="2.3.3" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta5-build3769" />
