--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="5.0.6.381" />
-    <PackageReference Include="ClassicBioinfoTools" Version="2.5.1.227" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.5.2-O00228BigWigConverte" />
 	<PackageReference Include="Isas.Framework" Version="8.12.4.925" />
     <PackageReference Include="Isas.SequencingFiles" Version="6.1.1.409" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
