--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="5.0.6.381" />
-    <PackageReference Include="ClassicBioinfoTools" Version="2.6.0-O00231TabixBgzfFile" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.6.0.232" />
 	<PackageReference Include="Isas.Framework" Version="8.13.0.935" />
     <PackageReference Include="Isas.SequencingFiles" Version="6.1.1.409" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
