--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -36,9 +36,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Illumina.Common" Version="5.0.6.381" />
-    <PackageReference Include="ClassicBioinfoTools" Version="2.6.0.232" />
-	<PackageReference Include="Isas.Framework" Version="8.13.0.935" />
+    <PackageReference Include="Illumina.Common" Version="5.1.0.384" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.7.0-O00246bwa" />
+	<PackageReference Include="Isas.Framework" Version="8.14.1.946" />
     <PackageReference Include="Isas.SequencingFiles" Version="6.1.1.409" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
