--- a/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
+++ b/Src/Canvas/Canvas.Wrapper/Canvas.Wrapper.csproj
@@ -28,10 +28,10 @@
 
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="5.1.1.387" />
-    <PackageReference Include="ClassicBioinfoTools" Version="2.7.4-O00258bwaIndexer" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.7.6.264" />
     <PackageReference Include="Isas.Manifests" Version="5.3.0.179" />
     <PackageReference Include="Isas.Ploidy" Version="3.1.0.94" />
-    <PackageReference Include="Isas.SequencingFiles" Version="6.2.0.414" />
+    <PackageReference Include="Isas.SequencingFiles" Version="6.2.1.416" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
