--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -32,9 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClassicBioinfoTools" Version="2.7.4-O00258bwaIndexer" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.7.6.264" />
     <PackageReference Include="Illumina.Common" Version="5.1.1.387" />
-    <PackageReference Include="Isas.SequencingFiles" Version="6.2.0.414" />
+    <PackageReference Include="Isas.SequencingFiles" Version="6.2.1.416" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
