--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -37,8 +37,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="5.1.1.387" />
-    <PackageReference Include="ClassicBioinfoTools" Version="2.7.4-O00258bwaIndexer" />
-    <PackageReference Include="Isas.SequencingFiles" Version="6.2.0.414" />
+    <PackageReference Include="ClassicBioinfoTools" Version="2.7.6.264" />
+    <PackageReference Include="Isas.SequencingFiles" Version="6.2.1.416" />
     <PackageReference Include="MathNet.Numerics.Core" Version="3.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="protobuf-net" Version="2.3.2" />
