--- a/Canvas.nuspec
+++ b/Canvas.nuspec
@@ -8,15 +8,15 @@
     <owners>Illumina</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Canvas</description>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright © Illumina $copyright$</copyright>
     <tags>Canvas</tags>
     <dependencies>
-      <dependency id="ClassicBioinfoTools" version="[2.6.0.232,3.0.0)" />
-      <dependency id="Isas.Manifests" version="[5.1.0.173,6.0.0)" />
-      <dependency id="Isas.Ploidy" version="[3.0.0.92,4.0.0)" />
+      <dependency id="ClassicBioinfoTools" version="[2.7.5.261,3.0.0)" />
+      <dependency id="Isas.Manifests" version="[5.3.0.179,6.0.0)" />
+      <dependency id="Isas.Ploidy" version="[3.1.0.94,4.0.0)" />
       <dependency id="Isas.SequencingFiles" version="[6.2.0.414,7.0.0)" />
-      <dependency id="Isas.Framework" version="[8.13.0.935,9.0.0)" />
-      <dependency id="Illumina.Common" version="[5.1.0.384,6.0.0)" />
+      <dependency id="Isas.Framework" version="[8.15.3.963,9.0.0)" />
+      <dependency id="Illumina.Common" version="[5.1.1.387,6.0.0)" />
       <dependency id="MathNet.Numerics.Core" version="[3.17.0,4.0.0)" />
       <dependency id="protobuf-net" version="[2.3.2,3.0.0)" />
     </dependencies>
